# xplorer-extensions

./: .gitignore  README.md
3d-viewer/: .sig  package.json
ai-chat/: package.json
architect/: .sig  package.json
audio-waveform-extension/: package.json
backup/: .sig  package.json
batch-image/: .sig  package.json  tsconfig.json
bulk-rename-extension/: package.json
claude-code/: .sig  package.json
code-editor-extension/: .sig  README.md  package-lock.json  package.json
collaboration/: .sig  manifest.json  package.json
collaboration/native/: Cargo.toml
collaboration/native/src/: lib.rs
compare-files-extension/: package.json
compress-extension/: package.json
cyberpunk-theme/: .sig  package-lock.json  package.json
docker/: .sig  package.json
dracula-theme/: .sig  package-lock.json  package.json
duplicate-finder-extension/: package.json
extract-extension/: package.json
file-comparison-extension/: package.json
file-hasher/: .sig  README.md  package.json
file-organizer-extension/: package.json
file-properties-extension/: package.json
file-tags-extension/: package.json
folder-stats/: .sig  README.md  package.json
gdrive/: .sig  package.json
git-extension/: .sig  package.json
ide-mode/: .sig  package.json
image-editor/: .sig  package.json
image-gallery/: README.md  package.json
json-formatter/: .sig  README.md  package.json  tsconfig.json
markdown-preview/: README.md  package.json
nord-theme/: .sig  package-lock.json  package.json
notes-extension/: package.json
ocean-deep-theme/: .sig  package-lock.json  (+1 more)
(+73 files in other folders)
